--- a/proyecto.Css
+++ b/proyecto.Css
@@ -23,6 +23,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  list-style: none;
 }
 
 .navbar {
@@ -40,15 +41,15 @@ header {
 
 .navbar-list li:first-child a {
   color: var(--text-color);
-  font-weight: 600;
+  font-weight: 100;
 }
 
 .cart-icon {
   font-weight: 600;
   border-radius: 10px;
-  height: 30px;
-  padding: 5px 19px;
-  margin-right: 1rem;
+  height: 24px;
+  padding: 0;
+  margin-right: 0;
   color: var(--text-color);
   cursor: pointer;
 }
