agrego-hero-section-mas-info-de-la-pagina

--- a/proyecto.Css
+++ b/proyecto.Css
@@ -29,7 +29,7 @@ header {
 }
 
 .logo {
-  height: 70%;
+  height: 123%;
 }
 
 .navbar .navbar-list {
@@ -44,16 +44,16 @@ header {
 }
 
 .navbar-list {
-  gap: 150px;
+  gap: 70px;
 }
 
 .navbar-list a {
-  color: var(--text-color);
+  color: #483858;
   font-size: 14px;
 }
 
 .navbar-list li:first-child a {
-  color: var(--text-color);
+  color: #483858;
   font-weight: 100;
 }
 
@@ -76,6 +76,8 @@ header {
   color: var(--text-color);
   width: 100%;
 }
+
+/* section hero */
 
 #hero {
   margin-top: 65px;
@@ -135,3 +137,60 @@ header {
   border-radius: 10px;
   object-fit: cover;
 }
+
+/* section about */
+
+#info{
+  background-color: var(--background-color);
+  padding: 70px 0px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 80px;
+  
+}
+
+#info h2{
+  font-size: 32px;
+  font-weight: 800;
+  color: var(--text-color);
+}
+
+.info-cards-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.info-card{
+  width: 190px;
+  height: 350px;
+  padding: 40px 30px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: var(--secondary-color);
+  border-radius: 10px;
+  align-items: center;
+  gap: 20px;
+}
+
+.info-card img {
+  width: 80px; 
+}
+
+.info-card h3 {
+  font-size: 15px;
+  font-weight: 600;
+  
+}
+
+.info-card p {
+  font-size: 10px;
+  text-align: center;
+}
+
