actualizo-repo-añado-mediaqueries-y-completo-el-landing-page

--- a/proyecto.Css
+++ b/proyecto.Css
@@ -15,6 +15,7 @@
   list-style-type: none;
 }
 
+/* header */
 header {
   background-color: var(--secondary-color);
   width: 100%;
@@ -37,6 +38,7 @@ header {
   align-items: center;
   justify-content: center;
   list-style: none;
+
 }
 
 .navbar {
@@ -45,6 +47,9 @@ header {
 
 .navbar-list {
   gap: 70px;
+  max-height: 80vh;
+  overflow-y: auto;
+  background-color: var(--secondary-color);
 }
 
 .navbar-list a {
@@ -64,6 +69,74 @@ header {
   padding: 0;
   margin-right: 0;
   color: var(--text-color);
+  cursor: pointer;
+}
+
+/* menu hamburguesa desktop disque agregado para mediqueries */
+#menu-toggle,
+#cart-toggle,
+.menu-label {
+  display: none;
+
+}
+
+.cart {
+  position:absolute;
+  top: 65px;
+  right: 0;
+  padding: 50px 30px;
+  background: #26122b;
+  background: linear-gradient(to top, 90deg,rgba(52, 40, 64, 1) 14%, rgba(87, 199, 133, 1) 91%, rgba(237, 221, 83, 1) 100%);
+  border-left: 1px solid var(--secondary-color);
+  display: flex;
+  flex-direction: column;
+  gap: 30px; 
+  height: calc(100vh - 65px);
+  overflow-y: scroll;
+  display: none;
+  z-index: 2;
+}
+
+.cart-total p {
+  font-weight: 700;
+
+}
+
+.cart-total span {
+  color: var(--text-button-color);
+  font-weight: 400;
+  font-size: 10px;
+
+}
+
+
+#cart-toggle:checked ~ .cart {
+  display: flex;
+}
+
+.cart-item img {
+  width: 50px;
+  height: auto;
+
+}
+
+.cart-item {
+  background-color: var(--secondary-color);
+  padding: 15px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+
+}
+
+.btn-add {
+  background: var(--text-button-color);
+  border: none;
+  padding: 10px 25px;
+  color: var(--text-color);
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -138,9 +211,9 @@ header {
   object-fit: cover;
 }
 
-/* section about */
+/* second section info (what can i found behind the mirror) */
 
-#info{
+#info {
   background-color: var(--background-color);
   padding: 70px 0px;
   width: 100%;
@@ -149,16 +222,15 @@ header {
   align-items: center;
   flex-direction: column;
   gap: 80px;
-  
 }
 
-#info h2{
+#info h2 {
   font-size: 32px;
   font-weight: 800;
   color: var(--text-color);
 }
 
-.info-cards-container{
+.info-cards-container {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
@@ -166,7 +238,7 @@ header {
   gap: 20px;
 }
 
-.info-card{
+.info-card {
   width: 190px;
   height: 350px;
   padding: 40px 30px;
@@ -180,13 +252,12 @@ header {
 }
 
 .info-card img {
-  width: 80px; 
+  width: 90px;
 }
 
 .info-card h3 {
   font-size: 15px;
   font-weight: 600;
-  
 }
 
 .info-card p {
@@ -194,3 +265,282 @@ header {
   text-align: center;
 }
 
+/* third section products-servicios (whos the reflection witin)*/
+#product-container {
+  background-color: var(--background-color);
+  padding: 40px 0px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 80px;
+}
+
+#product-container h2 {
+  font-size: 32px;
+  font-weight: 800;
+  color: var(--text-color);
+}
+
+.services {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  padding: 48px 0;
+  max-width: 1200px;
+}
+
+.selection-services {
+  background: #341736;
+  padding: 20px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.selection-services img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.info-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.btn {
+  background: var(--text-button-color);
+  border: none;
+  padding: 10px 25px;
+  color: var(--text-color);
+  border-radius: 10px;
+  justify-content: center;
+}
+
+.btn a {
+  color: var(--text-color);
+}
+
+/* categories */
+#discover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+  max-width: auto;
+  width: 100%;
+  background-color: var(--background-color);
+}
+
+#discover h2 {
+  font-size: 32px;
+  font-weight: 800;
+  margin-bottom: 40px;
+  color: var(--text-color);
+}
+
+.categories {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.category {
+  background: var(--text-button-color);
+  border: none;
+  padding: 10px 15px;
+  color: var(--text-color);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.active {
+  background: var(--primary-color);
+}
+
+/* productos de la tienda */
+
+.productos-compra {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
+  gap: 20px;
+  padding: 10px 0;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.info-producto {
+  background: var(--secondary-color);
+  padding: 20px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  min-height: 400px;
+  gap: 20px;
+  margin-bottom: 20px;
+  width: 200px;
+}
+
+.info-producto img {
+  width: 90px;
+  margin-top: 10px;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.info-producto h3 {
+  font-size: 15px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.info-producto p {
+  font-size: 10px;
+  text-align: center;
+}
+
+.info-price {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+.info-price p {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.info-price button {
+  background: var(--text-button-color);
+  border: none;
+  padding: 10px 25px;
+  color: var(--text-color);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.info-price button a {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+/* productos de la tienda section hierbas y resinas */
+#hierbas {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+  max-width: auto;
+  width: 100%;
+  background-color: var(--background-color);
+}
+
+#hierbas h2 {
+  font-size: 32px;
+  font-weight: 800;
+  margin-bottom: 40px;
+  color: var(--text-color);
+}
+
+.producto-hierbas {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
+  gap: 20px;
+  padding: 10px 0;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.info-hierbas {
+  background: var(--secondary-color);
+  padding: 20px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  min-height: 400px;
+  gap: 20px;
+  margin-bottom: 20px;
+  width: 200px;
+}
+
+.info-hierbas img {
+  width: 90px;
+  margin-top: 10px;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.info-hierbas h3 {
+  font-size: 15px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.info-hierbas p {
+  font-size: 10px;
+  text-align: center;
+}
+
+.btn-load {
+  background: none;
+  border: 1px solid var(--text-button-color);
+  padding: 10px 25px;
+  color: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* footer */
+
+footer {
+  background: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  padding: 60px 0;
+}
+
+footer a {
+  color: var(--text-color);
+  font-weight: 300;
+  font-size: 14px;
+}
+
+footer p {
+  color: var(--text-color);
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
