actualizo-el-landing-page-añadi-menu-hamburguesa-mas-imagenes-de-productos-y-footer

--- a/proyecto.Css
+++ b/proyecto.Css
@@ -38,7 +38,6 @@ header {
   align-items: center;
   justify-content: center;
   list-style: none;
-
 }
 
 .navbar {
@@ -77,20 +76,25 @@ header {
 #cart-toggle,
 .menu-label {
   display: none;
-
 }
 
 .cart {
-  position:absolute;
+  position: absolute;
   top: 65px;
   right: 0;
   padding: 50px 30px;
   background: #26122b;
-  background: linear-gradient(to top, 90deg,rgba(52, 40, 64, 1) 14%, rgba(87, 199, 133, 1) 91%, rgba(237, 221, 83, 1) 100%);
+  background: linear-gradient(
+    to top,
+    90deg,
+    rgba(52, 40, 64, 1) 14%,
+    rgba(87, 199, 133, 1) 91%,
+    rgba(237, 221, 83, 1) 100%
+  );
   border-left: 1px solid var(--secondary-color);
   display: flex;
   flex-direction: column;
-  gap: 30px; 
+  gap: 30px;
   height: calc(100vh - 65px);
   overflow-y: scroll;
   display: none;
@@ -99,16 +103,13 @@ header {
 
 .cart-total p {
   font-weight: 700;
-
 }
 
 .cart-total span {
   color: var(--text-button-color);
   font-weight: 400;
   font-size: 10px;
-
 }
-
 
 #cart-toggle:checked ~ .cart {
   display: flex;
@@ -117,7 +118,6 @@ header {
 .cart-item img {
   width: 50px;
   height: auto;
-
 }
 
 .cart-item {
@@ -128,7 +128,6 @@ header {
   align-items: center;
   justify-content: space-between;
   gap: 20px;
-
 }
 
 .btn-add {
