ya-realice-todos-los-cambios-y-ahora-funciona-en-pc-y-en-telefonos-el-landing

--- a/proyecto.Css
+++ b/proyecto.Css
@@ -7,172 +7,201 @@
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Cinzel Decorative", serif;
-  text-decoration: none;
-  list-style-type: none;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Cinzel Decorative", serif;
+    text-decoration: none;
+    list-style-type: none;
+}  
+
+/* notas: 
+*width: ancho
+*heigth: alto
+*display none: el elemento no se muestra
+*display flex: se acomoda en filas o columnas
+*justify-content flex start: alinea al inicio a la izquierda en row, flex-end: alinea al final a la derecha en row, center: centra los elementos orizontalmente, space-between: Distribuye los elementos con espacios iguales entre ellos, sin espacio en los bordes, space-around: Distribuye con espacios iguales alrededor de cada elemento, más espacio en los bordes, space-evenly: Distribuye con espacios iguales entre y alrededor de los elementos
+*padding: espacio entre el contenido y el borde
+*z-index: se muestra delante o detras cuando varios elementos se superponen*/
 
 /* header */
 header {
-  background-color: var(--secondary-color);
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 65px;
-  padding: 0px 30px;
-  position: fixed;
-  top: 0;
-  z-index: 2;
+    background: var(--secondary-color);   
+    width: 100%;        
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    padding: 0 30px;
+    /* para fixear/fijo en el top de la pagina */
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    box-shadow: o 8px 24px rgba(red, green, blue, alpha) (0, 0, 0, 0.2);
 }
 
 .logo {
-  height: 123%;
+    height: 70px;
 }
 
-.navbar .navbar-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  list-style: none;
+#menu-toggle {
+    display: none; /* ocultar checkbox */
+}
+
+#cart-toggle {
+    display: none; /* ocultar checkbox */
+}
+
+
+.menu-label img {
+    width: 30px;
+    height: auto;
+    display: none; /* ocultar imagen por defecto */
+}
+
+.navbar,
+.navbar-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .navbar {
-  gap: 150px;
+    gap: 150px;
+}
+
+.navbar i {
+    font-size: 30px;
+    display: none; /* ocultar icono de menu hamburguesa por defecto */
 }
 
 .navbar-list {
-  gap: 70px;
-  max-height: 80vh;
-  overflow-y: auto;
-  background-color: var(--secondary-color);
+    gap: 30px;
+
 }
 
 .navbar-list a {
-  color: #483858;
-  font-size: 14px;
+    color: var(--primary-color);
+    font-size: 18px;
+    font-weight: 70;
 }
 
 .navbar-list li:first-child a {
-  color: #483858;
-  font-weight: 100;
+    color: var(--text-button-color);
+    font-weight: 600;
 }
 
-.cart-icon {
-  font-weight: 600;
-  border-radius: 10px;
-  height: 24px;
-  padding: 0;
-  margin-right: 0;
-  color: var(--text-color);
-  cursor: pointer;
+.cart-icon img {
+    font-weight: 600;
+    border-radius: 10px;
+    height: 30px;
+    padding: 5px 19px;
+    margin-right: 1rem;
+    color: var(--primary-color);
+    cursor: pointer;
+    display: inline-block; /* mostrar icono de carrito */
+
 }
 
-/* menu hamburguesa desktop disque agregado para mediqueries */
-#menu-toggle,
-#cart-toggle,
-.menu-label {
-  display: none;
-}
+/* calculo que va a salir el menu hamburguesa desktop y agregado para mediaqueries */
 
 .cart {
-  position: absolute;
-  top: 65px;
-  right: 0;
-  padding: 50px 30px;
-  background: #26122b;
-  background: linear-gradient(
-    to top,
-    90deg,
-    rgba(52, 40, 64, 1) 14%,
-    rgba(87, 199, 133, 1) 91%,
-    rgba(237, 221, 83, 1) 100%
-  );
-  border-left: 1px solid var(--secondary-color);
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  height: calc(100vh - 65px);
-  overflow-y: scroll;
-  display: none;
-  z-index: 2;
+    position: absolute;
+    top: 65px;
+    right: 0;
+    padding: 50px 30px;
+    background: var(--background-color);
+    border-left: 1px solid var(--primary-color);
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    height: calc(100vh - 65px);
+    overflow-y: scroll;
+    z-index: 2;
+
 }
 
 .cart-total p {
-  font-weight: 700;
+    font-weight: 700;
 }
 
 .cart-total span {
-  color: var(--text-button-color);
-  font-weight: 400;
-  font-size: 10px;
+    color: var(--text-button-color);
+    font-weight: 400;
+    font-size: 10px;
+    
 }
 
 #cart-toggle:checked ~ .cart {
-  display: flex;
+    display: flex;
+
 }
 
 .cart-item img {
-  width: 50px;
-  height: auto;
+    width: 50px;
+    height: auto;
+
 }
 
 .cart-item {
-  background-color: var(--secondary-color);
-  padding: 15px;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
+    background-color: var(--secondary-color);
+    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+
+
 }
 
 .btn-add {
-  background: var(--text-button-color);
-  border: none;
-  padding: 10px 25px;
-  color: var(--text-color);
-  border-radius: 10px;
-  cursor: pointer;
+    background-color: var(--text-button-color);
+    border: none;
+    padding: 10px 25px;
+    color: var(--text-color);
+    border-radius: 10px;
+    cursor: pointer;
+
 }
 
 .main {
-  background: var(--background-color);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: var(--text-color);
-  width: 100%;
+    background: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--text-color);
+    width: 100%;
+
 }
 
 /* section hero */
 
 #hero {
-  margin-top: 65px;
-  padding: 70px;
-  max-width: 1200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    margin-top: 65px;
+    padding: 70px;
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .hero-info {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 50%;
+
 }
 
 .hero-info h1 {
-  font-size: 48px;
-  width: 80%;
-  min-width: 500px;
-  font-weight: 800;
-  color: var(--text-color);
+    font-size: 48px;
+    width: 80%;
+    min-width: 500px;
+    font-weight: 800;
+    color: var(--text-color);
 }
 
 .hero-info p {
@@ -329,6 +358,7 @@ header {
 .btn a {
   color: var(--text-color);
 }
+
 
 /* categories */
 #discover {
@@ -543,3 +573,5 @@ footer p {
   justify-content: center;
   gap: 20px;
 }
+
+
