--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,58 +1,63 @@
-/* se supone que esta seccion configura para tablets beabor */
-@media (max-width: 992px) {
-  #menu-toggle:checked ~ .main {
-    margin-top: 300px;
+@media(max-width: 992px) {
+  /* Mostrar el toggle checkbox pero oculto visualmente */
+  #menu-toggle {
+    display: none;
   }
 
   .navbar {
     gap: 10px;
+
   }
 
-  .cart-icon {
+
+
+  .menu-label img {
+    width: 30px;
+    height: auto;
+  }
+
+  /* Menú oculto por defecto */
+  .navbar-list {
     display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 65px;
+    left: 0;
+    width: 100%;
+    background-color: var(--secondary-color);
+    padding: 45px 30px;
+    z-index: 9;
+    gap: 25px;
   }
 
+  /* Cuando el checkbox menu-toggle está chequeado, mostrar menú */
+  #menu-toggle:checked ~ .navbar .navbar-list {
+    display: flex;
+  }
+
+  /* Carrito visible siempre en escritorio */
   .cart-icon {
+    display: flex;
+    cursor: pointer;
+    font-size: 25px;
+    user-select: none;
     height: 33px;
     margin-right: 0rem;
     margin-top: 4px;
   }
 
-  .navbar-list {
-    position: absolute;
-    top: 65px;
-    left: 5%;
-    right: 5%;
-    width: 90%;
-    flex-direction: column;
-    background-color: var(--secondary-color);
-    border: 2px solid var(--secondary-color);
-    border-top: none;
-    border-radius: 0 0 15px 15px;
-    align-items: flex-start;
-    padding: 45px 30px;
-    gap: 25px;
-    z-index: 2;
+  /* El carrito se oculta por defecto */
+  .cart {
     display: none;
+    
   }
 
-  .navbar-list {
-    font-size: 18px;
-  }
-
-  /* mostramos el icono del menu  */
-
-  .menu-label {
-    display: flex;
-    order: 2;
-    cursor: pointer;
-  }
-
-  #menu-toggle:checked + .navbar-list {
+  /* Cuando checkbox carrito está chequeado, mostrar carrito */
+  #cart-toggle:checked ~ .cart {
     display: flex;
   }
 
-  .hero-info {
+   .hero-info {
     width: 100%;
     text-align: center;
     justify-content: center;
@@ -121,27 +126,50 @@
   .category {
     width: 120px;
   }
+
+
 }
 
-/* y se supone que esta parte se configura para celulares neni */
-
 @media (max-width: 576px) {
-  /* modificar el carrito para celulares */
+  /* Ajustes para móvil */
+
+ 
 
   .cart {
-    display: none;
-  }
-  .cart {
-    left: 0;
     width: 100%;
-    border: none;
+    right: 0;
+    top: 60px;
+    max-height: 60vh;
   }
 
-  .cart-item {
-    flex-wrap: wrap;
+  .navbar ul {
+    background: var(--secondary-color);
+    width: 100%;
+    height: calc(100vh - 65px);
+    position: absolute;
+    top: 65px;
+    left: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
   }
 
-  /* hero */
+  .navbar i {
+    display: block;
+  }
+
+  #menu-toggle:checked ~ .navbar-list {
+    display: flex;
+
+  }
+
+  #cart-toggle:checked ~ .cart {
+    display: flex;
+}
+  
+
+/* hero */
 
   .hero-info p {
     width: 70%;
@@ -159,10 +187,10 @@
   }
 
   #product-container {
-    width: 95%;
+    width: 100%;
   }
 
-  #discover h2 {
+ #discover h2 {
     font-size: 37px;
     width: 100%;
     text-align: center;
@@ -181,9 +209,19 @@
 
   .services {
     gap: 20px;
+
   }
 
   .services img {
     width: 100%;
   }
+
+
+
+
+
+
+
+
+
 }
